--- a/apps/admin/lib/admin/live/category_live/create.html.heex
+++ b/apps/admin/lib/admin/live/category_live/create.html.heex
@@ -6,16 +6,22 @@
   </div>
   
   <div class="max-w-lg mx-auto bg-white p-8 rounded shadow-md mt-2">
-    <h2 class="text-2xl font-semibold mb-4">Create a New Blog Post</h2>
+    <h2 class="text-2xl font-semibold mb-4">Create a New Category</h2>
     
-    <.simple_form for={@form} id="category_form" method="post">
-      <%!-- <.error :if={@check_errors}>
+    <.simple_form
+      for={@form}
+      id="category_form"
+      method="post"
+      phx-submit="save"
+      phx-change="validate"
+    >
+      <.error :if={@check_errors}>
         Oops, something went wrong! Please check the errors below.
-      </.error> --%>
-      <.input field={@form[:name]} type="text" label="Name" required /> <%!-- user_id --%>
-      <.input field={@form[:user_id]} type="hidden" value="" />
+      </.error>
+      <.input field={@form[:name]} type="text" label="Name" phx-debounce="2000" /> <%!-- user_id --%>
+      <.input field={@form[:user_id]} type="hidden" value={@current_user.id} />
       <:actions>
-        <.button phx-disable-with="Creating account..." class="w-full">Create an account</.button>
+        <.button phx-disable-with="Creating category..." class="w-full">Create Category</.button>
       </:actions>
     </.simple_form>
   </div>
